--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
     "name": "@jwarielle/cupcakenames",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "description": "Removes all spaces from a string",
+    "license": "MIT",
+    "repository": "jwarielle/cupcakenames",
+    "main": "index.js",
+    "keywords": [
+        "cupcake",
+        "npm",
+        "package",
+        "jwarielle"
+    ]
 }
